fixed: Admin Dashboard UI